--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ p {
     text-align: justify;
 }
 
-section {
+.flexible-container {
     display: flex;
 }
 
@@ -49,3 +49,5 @@ section {
     background-position: right;
     padding-right: 50px;
 }
+
+.fl
